[gd_scene load_steps=12 format=2]

[ext_resource path="res://Queue.gd" type="Script" id=1]
[ext_resource path="res://Camera.gd" type="Script" id=2]
[ext_resource path="res://MeshLibrary.tres" type="MeshLibrary" id=3]
[ext_resource path="res://GridMap.gd" type="Script" id=4]
[ext_resource path="res://Pawn.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.470588 )

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.054902, 0.227451, 0.913725, 1 )

[sub_resource type="ConvexPolygonShape" id=5]
points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0.113725, 0.360784, 1 )

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[node name="Level" type="Spatial"]

[node name="Queue" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
editor/display_folded = true
transform = Transform( 0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 11, 8, 11 )
projection = 1
size = 20.0
script = ExtResource( 2 )

[node name="Interface" type="CanvasLayer" parent="Camera"]

[node name="EndTurnButton" type="Button" parent="Camera/Interface"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -105.0
margin_top = -60.0
margin_right = -20.0
margin_bottom = -20.0
text = "End turn"

[node name="DevPanel" type="Panel" parent="Camera/Interface"]
margin_right = 249.0
margin_bottom = 140.0
custom_styles/panel = SubResource( 4 )

[node name="Mouse" type="Label" parent="Camera/Interface/DevPanel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 40.0
margin_bottom = 14.0
text = "Mouse Target:"

[node name="Target" type="Label" parent="Camera/Interface/DevPanel/Mouse"]
margin_left = 95.0
margin_right = 103.0
margin_bottom = 14.0
text = "[]"

[node name="Steps" type="Label" parent="Camera/Interface/DevPanel"]
margin_left = 5.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 14.0
text = "Steps:"

[node name="Value" type="Label" parent="Camera/Interface/DevPanel/Steps"]
margin_left = 45.0
margin_right = 40.0
margin_bottom = 14.0
text = "0"

[node name="Turn" type="Label" parent="Camera/Interface/DevPanel"]
margin_left = 5.0
margin_top = 35.0
margin_right = 40.0
margin_bottom = 14.0
text = "Turn:"

[node name="Value" type="Label" parent="Camera/Interface/DevPanel/Turn"]
margin_left = 35.0
margin_right = 60.0
margin_bottom = 14.0

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 3 )
data = {
"cells": PoolIntArray( -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, 3, 2, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 2, 0, 2, 3, 0, -65536, 3, 0, -65535, 3, 0, -65534, 3, 0, -65533, 3, 0, -65532, 3, 0, -65531, 3, 0, -65536, 4, 0, -65535, 4, 0, -65534, 4, 0, -65533, 4, 0, -65532, 4, 0, -65531, 4, 0, -65536, 5, 0, -65535, 5, 0, -65534, 5, 0, -65533, 5, 0, -65532, 5, 0, -65531, 5, 0 )
}
script = ExtResource( 4 )
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="UnitPlayer" type="Spatial" parent="GridMap"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, 5 )
script = ExtResource( 5 )
max_steps = 6
is_playable = true

[node name="Mesh" type="MeshInstance" parent="GridMap/UnitPlayer"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="GridMap/UnitPlayer/Mesh"]

[node name="CollisionShape" type="CollisionShape" parent="GridMap/UnitPlayer/Mesh/StaticBody"]
shape = SubResource( 5 )

[node name="Tween" type="Tween" parent="GridMap/UnitPlayer"]

[node name="UnitEnemy" type="Spatial" parent="GridMap"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 1, 5 )
script = ExtResource( 5 )
max_steps = 0

[node name="Mesh" type="MeshInstance" parent="GridMap/UnitEnemy"]
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="StaticBody" type="StaticBody" parent="GridMap/UnitEnemy/Mesh"]

[node name="CollisionShape" type="CollisionShape" parent="GridMap/UnitEnemy/Mesh/StaticBody"]
shape = SubResource( 6 )

[node name="Tween" type="Tween" parent="GridMap/UnitEnemy"]
[connection signal="user_input" from="Camera" to="Queue" method="_on_Camera_user_input"]
[connection signal="pressed" from="Camera/Interface/EndTurnButton" to="Queue" method="_on_EndTurnButton_pressed"]
